Bug 1615586 - [RTL] Fix text alignment of the values text in the Security tab when clicking them r=Honza
Differential Revision: https://phabricator.services.mozilla.com/D62901

UltraBlame original commit: 40ee37b0fda9f80897b27d1f40bf497de442d8cf

--- a/devtools/client/shared/components/tree/TreeView.css
+++ b/devtools/client/shared/components/tree/TreeView.css
@@ -22,8 +22,8 @@
 .treeTable .treeLabelCell,
 .treeTable .treeValueCell {
   padding: 2px 0;
-  line-height: 16px; 
   padding-inline-start: 4px;
+  line-height: 16px; 
   vertical-align: top;
   overflow: hidden;
 }
@@ -40,8 +40,7 @@
 }
 
 .treeTable .treeValueCell.inputEnabled {
-  padding-top: 0;
-  padding-bottom: 0;
+  padding-block: 0;
 }
 
 .treeTable .treeValueCell.inputEnabled input {
@@ -65,6 +64,7 @@
 .treeTable .treeValueCell > [aria-labelledby],
 .treeTable .treeLabelCell > .treeLabel {
   unicode-bidi: plaintext;
+  text-align: match-parent;
 }
 
 
@@ -136,8 +136,7 @@
   display: inline-block;
   vertical-align: bottom;
   
-  margin-inline-start: 3px;
-  margin-inline-end: 1px;
+  margin-inline: 3px 1px;
 }
 
 
@@ -170,9 +169,8 @@
 }
 
 .treeTable .treeHeaderCellBox {
-  padding: 2px 0;
-  padding-inline-start: 10px;
-  padding-inline-end: 14px;
+  padding-block: 2px;
+  padding-inline: 10px 14px;
 }
 
 .treeTable .treeHeaderRow > .treeHeaderCell:first-child > .treeHeaderCellBox {
